Update JVM args
- Use recommended Java 1.8 (full-speed) debug args, not 1.3
- Use random debug port to avoid conflicts
- Enable GC logging
- Limit metaspace size, remove obsolete PermGen args