@@ -71,10 +71,8 @@
     <webdriver.screenshot.dir>${project.build.directory}/screenshots</webdriver.screenshot.dir>
     <webdriver.wait>20</webdriver.wait>
     <googleopenid.credentials>zanata.user.1:</googleopenid.credentials>
-    <!-- on jenkins, this needs to be set to empty - so that cargo can shutdown. see http://stackoverflow.com/questions/1096642/tomcat-failed-to-shutdown -->
     <cargo.debug.jvm.args>
-      -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8787
-      -Xnoagent -Djava.compiler=NONE
+      -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0
     </cargo.debug.jvm.args>
     <!-- this property can be used to control what test needs to be run by failsafe -->
     <default.test.patterns>**/BasicAcceptanceTestSuite.java</default.test.patterns>
@@ -753,12 +751,26 @@
                 <configuration>
                   <configuration>
                     <properties>
+                      <!-- Ref: http://blog.sokolenko.me/2014/11/javavm-options-production.html -->
                       <cargo.jvmargs>
                         <!-- NB: JDom parser doesn't like comments starting with '-' -->
+                        -server
+                        -showversion
+                        -XX:+PrintCommandLineFlags
+                        -Xmx1536m
+                        -XX:MaxMetaspaceSize=1g
                         -XX:-OmitStackTraceInFastThrow
-                        -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target
-                        -XX:PermSize=512m -XX:MaxPermSize=1024
-                        -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
+                        -XX:+UseConcMarkSweepGC
+                        -XX:+CMSClassUnloadingEnabled
+                        -XX:+PrintGCDateStamps
+                        -verbose:gc
+                        -XX:+PrintGCDetails
+                        -Xloggc:"target/gc.log"
+                        -XX:+UseGCLogFileRotation
+                        -XX:NumberOfGCLogFiles=10
+                        -XX:GCLogFileSize=100M
+                        -XX:+HeapDumpOnOutOfMemoryError
+                        -XX:HeapDumpPath=target
                         ${cargo.debug.jvm.args}
                       </cargo.jvmargs>
                     </properties>
@@ -772,10 +784,23 @@
                     <properties>
                       <cargo.jvmargs>
                         <!-- NB: JDom parser doesn't like comments starting with '-' -->
+                        -server
+                        -showversion
+                        -XX:+PrintCommandLineFlags
+                        -Xmx1536m
+                        -XX:MaxMetaspaceSize=1g
                         -XX:-OmitStackTraceInFastThrow
-                        -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target
-                        -XX:PermSize=512m -XX:MaxPermSize=1024
-                        -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
+                        -XX:+UseConcMarkSweepGC
+                        -XX:+CMSClassUnloadingEnabled
+                        -XX:+PrintGCDateStamps
+                        -verbose:gc
+                        -XX:+PrintGCDetails
+                        -Xloggc:"target/gc.log"
+                        -XX:+UseGCLogFileRotation
+                        -XX:NumberOfGCLogFiles=10
+                        -XX:GCLogFileSize=100M
+                        -XX:+HeapDumpOnOutOfMemoryError
+                        -XX:HeapDumpPath=target
                         ${cargo.debug.jvm.args}
                       </cargo.jvmargs>
                     </properties>
@@ -1023,7 +1048,7 @@
                 <echo />
                 <echo>-DallFuncTests to enable all functional tests (defaults to smoke tests)</echo>
                 <echo />
-                <echo>-Dcargo.debug.jvm.args : If not set by default will listen to port 8787. Need to set to empty on jenkins</echo>
+                <echo>-Dcargo.debug.jvm.args : If not set by default will listen to a random port.</echo>
                 <echo />
                 <echo>-Dzanata.target.version=version of zanata to deploy. Default is: ${project.parent.version}</echo>
                 <echo>-Dzanata.instance.url=http://${cargo.host}:${cargo.servlet.port}/${context.path}</echo>
